# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/mojo_application.gni")

group("abax") {
  testonly = true

  deps = [
    ":app",
    ":apptests",
  ]
}

source_set("lib") {
  sources = [
    "constants.cc",
    "constants.h",
    "ledger_factory_impl.cc",
    "ledger_factory_impl.h",
    "ledger_impl.cc",
    "ledger_impl.h",
    "local_storage.cc",
    "local_storage.h",
    "page_connector.cc",
    "page_connector.h",
    "page_impl.cc",
    "page_impl.h",
    "page_snapshot_impl.cc",
    "page_snapshot_impl.h",
    "serialization.cc",
    "serialization.h",
  ]

  deps = [
    "//apps/ledger/api",
    "//apps/ledger/convert",
    "//apps/ledger/glue",
    "//mojo/public/cpp/application",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/system",
  ]

  public_deps = [
    "//lib/ftl",
    "//lib/mtl",
  ]
}

mojo_native_application("app") {
  output_name = "ledger_abax"
  sources = [
    "ledger_app.cc",
  ]

  deps = [
    ":lib",
    "//apps/ledger/api",
    "//mojo/public/cpp/application",
  ]
}

mojo_native_application("apptests") {
  output_name = "ledger_abax_apptests"

  testonly = true

  sources = [
    "ledger_apptest.cc",
  ]

  deps = [
    "//apps/ledger/api",
    "//lib/mtl",
    "//lib/mtl/environment",
    "//mojo/public/cpp/application",
    "//mojo/public/cpp/application:test_support",
    "//mojo/public/cpp/bindings:callback",
    "//mojo/public/cpp/system",
  ]

  data_deps = [
    ":app",
  ]
}
