# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("all") {
  deps = [
    ":acquirers/gps",
  ]
}

executable("acquirers/gps") {
  sources = [
    "gps.cc",
  ]

  deps = [
    "//apps/maxwell/context_service:interfaces",
    "//mojo/public/cpp/application:standalone",
    "//mojo/public/cpp/utility:utility",
    "//mojo/system",
  ]
}
