# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("acquirers") {
  deps = [
    ":gps",
  ]
}

executable("gps") {
  output_name = "acquirers/gps"

  sources = [
    "gps.cc",
    "gps.h",
  ]

  deps = [
    "//apps/maxwell:debug",
    "//apps/maxwell/services",
    "//apps/modular/lib/app",
    "//lib/mtl",
  ]
}
