# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("agents") {
  deps = [
    ":agents/carmen_sandiego",
    ":agents/ideas",
  ]
}

executable("agents/carmen_sandiego") {
  sources = [
    "carmen_sandiego.cc",
  ]

  public_deps = [
    "//third_party/rapidjson",
  ]

  deps = [
    "//apps/maxwell/interfaces",
    "//mojo/public/cpp/application:standalone",
    "//mojo/public/cpp/utility:utility",
    "//mojo/system",
  ]
}

executable("agents/ideas") {
  sources = [
    "ideas.cc",
  ]

  public_deps = [
    "//third_party/rapidjson",
  ]

  deps = [
    "//apps/maxwell/interfaces",
    "//mojo/public/cpp/application:standalone",
    "//mojo/public/cpp/utility:utility",
    "//mojo/system",
  ]
}
