# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("single_service_application") {
  sources = [
    "single_service_application.h",
  ]

  deps = [
    "//mojo/public/cpp/application:standalone",
  ]
}
